--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.9.3",
     "gulp-htmlmin": "^4.0.0",
+    "gulp-imagemin": "^4.1.0",
     "gulp-uglify": "^3.0.0",
     "pump": "^3.0.0"
   }
